--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,11 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   dio: ^5.4.3+1
-  intl: ^0.17.0
+  intl: ^0.19.0
   flutter_spinkit: ^5.2.1
+  get_it: ^7.7.0
+  logman: ^0.0.17
+  
 
 dev_dependencies:
   flutter_test:
